--- a/Paas_Ta_Front/paas/public/index.html
+++ b/Paas_Ta_Front/paas/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <style>
+      body {
+        background-color: #000000;
+      }
+    </style>
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
